--- a/style.css
+++ b/style.css
@@ -1,394 +1,294 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 3px;
-}
-.img {
-  width: 2.5rem;
-  height: 2.5rem;
-  background-image: url(images/Skill\ lemma\ logo.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.logo p {
-  font-size: 2rem;
-  font-family: monospace;
-}
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #00a1b9;
-  padding: 1.5rem;
-  color: aliceblue;
-  font-family: sans-serif;
-}
-
-/* elevate learning exp css and join now css */
-.section1 {
-  background: linear-gradient(
-    45deg,
-    blue,
-    white,
-    skyblue,
-    blue,
-    white,
-    skyblue
-  );
-  background-size: 500% 500%;
-  animation: color 6s ease-in infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px;
-  width: 50%;
-  margin: 10rem auto 0 auto;
-  color: skyblue;
-  border: 0.5px solid black;
-}
-
-@keyframes color {
-  0% {
-    background-position: 0% 0%;
-  }
-  100% {
-    background-position: 100% 0%;
-  }
-}
-
-.section1 img {
-  height: 200px;
-}
-
-.section1-text {
-  flex: 1;
-  margin-left: 20px;
-}
-
-.section1 h1 {
-  color: greenyellow;
-  margin: 0;
-}
-
-.section1 p {
-  color: black;
-  padding: 0px 50px 0px 50px;
-}
-
-.box {
-  background: linear-gradient(to bottom, rgba(255, 111, 0, 0.941), white);
-  color: whitesmoke;
-  border: 0.5px solid black;
-  width: 50%;
-  height: 60%;
-  text-align: center;
-  padding: 40px;
-  margin: 0 auto auto auto;
-}
-
-.btns {
-  margin: auto;
-  border-radius: 30px;
-  padding: 12px 25px;
-  transition: transform 0.3s ease;
-}
-
-.btns button:active,
-.btns button:focus {
-  background-color: navy;
-}
-
-.btns button {
-  background-color: blue;
-  color: white;
-  font-size: 15px;
-  border-radius: 2px solid white;
-}
-
-@media (max-width: 768px) {
-  .section1 {
-    width: 80%;
-  }
-
-  .box {
-    width: 90%;
-    max-width: 100%;
-    padding: 20px;
-  }
-  .section1-text {
-    margin-left: 10px;
-  }
-
-  .section1 img {
-    height: 150px;
-  }
-}
-
-/* Ends here elevate learning exp css and join now css */
-
-li {
-  list-style: none;
-}
-.nav-items {
-  display: flex;
-  width: 60%;
-  justify-content: space-around;
-}
-
-.items {
-  display: flex;
-  gap: 1.25rem;
-  align-items: center;
-  font-size: 1.3rem;
-}
-
-.signin {
-  font-family: serif;
-  font-size: 1.3rem;
-  font-weight: 400;
-  display: flex;
-  align-items: center;
-  gap: 2px;
-}
-
-.icon {
-  width: 2rem;
-  height: 2rem;
-  background-image: url(images/Sign-in\ logo.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.first-section {
-  height: 100vh;
-  width: 100%;
-  background: linear-gradient(#ff8911, white);
-}
-.doubt-field {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 70vh;
-  padding: 0 2rem;
-  gap: 1rem;
-}
-.doubt-field h1 {
-  color: #fff;
-  font-style: italic;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-}
-.doubt-field form textarea:focus {
-  outline: none;
-}
-
-.doubt-field form textarea {
-  border: 2px solid #ff8911;
-  padding: 0.5rem;
-  font-size: 16px;
-}
-.doubt-field form textarea::placeholder {
-  color: black;
-  text-transform: uppercase;
-  font-size: 18px;
-}
-.doubt-field form {
-  display: flex;
-  background-color: #fff;
-  padding: 0.9rem;
-  border-radius: 15px;
-  max-width: 95%;
-  align-items: center;
-  gap: 1rem;
-  border: 1px solid silver;
-}
-
-#file {
-  display: none;
-}
-
-.arrow {
-  background: none;
-  border: none;
-}
-
-.menu-icn {
-  color: black;
-  font-size: 1.8rem;
-  font-weight: 600;
-  color: #fff;
-  padding-top: 0.3rem;
-}
-
-@media only screen and (max-width: 861px) {
-  nav {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
+    margin: 0;
     padding: 0;
-    width: 50%;
+    box-sizing: border-box;
   }
-  .nav-items {
-    flex-direction: column;
-    gap: 1.25rem;
-    padding: 1rem 0;
-    display: none;
+  
+  body {
+    background-color: rgba(236, 244, 245, 0.9);
+    font-family: Arial, sans-serif;
   }
-  .items {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1.25rem;
-    font-size: 1.2rem;
-  }
-  .doubt-field {
-    padding: 0 1rem;
-  }
-  .doubt-field h1 {
-    margin-left: 0.5rem;
-  }
-  .navigation-bar {
-    display: flex;
-    justify-content: space-between;
+  
+ /* .content {
+    padding: 4rem;
     background-color: #00a1b9;
-    padding: 1.5rem;
+  }*/
+
+  .content {
+    margin: 0%;
+    height: 440px;
+    padding: 4rem;
+    width: auto;
+    padding: 8rem;
+    padding-left: 5rem;
+    background-color:#00A1B9 ;
   }
-}
-
-@media only screen and (min-width: 861px) {
-  .menu-icn {
-    display: none;
+  
+  .heading1 {
+    font-size: 25px;
+    color: white;
   }
-
-  .nav-items {
-    display: flex !important; /* Ensure navigation items are always visible on larger screens */
+  
+  p {
+    color: white;
+    font-size: 15px;
   }
-}
-
-@media only screen and (max-width: 500px) {
-  .items {
-    font-size: 0.9rem;
+  
+  .para {
+    max-width: 540px;
+    font-weight: 500;
   }
-  .signin {
-    font-size: 1rem;
+  
+  .expert-btn {
+    border: 2px solid white;
+    border-radius: 25px;
+    height: 50px;
+    width: 180px;
+    font-size: 15px;
+    font-weight: 900;
   }
-}
-
-/*     Footer CSS Start  HERE Please do not add other files CSS here .              */
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-body {
-  line-height: 1.5;
-  font-family: "Poppins", sans-serif;
-}
-
-.Contact {
-  height: 100px;
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-}
-
-#contact-btn {
-  border-radius: 10px;
-  height: 26px;
-  background-color: black;
-  color: white;
-  width: 90px;
-  cursor: pointer;
-}
-#contact-btn:hover {
-  background-color: crimson;
-}
-
-.row {
-  display: grid;
-  grid-template-columns: auto auto auto;
-
-  justify-content: space-around;
-  gap: 20px;
-}
-.row div {
-  margin-top: 20px;
-}
-
-li {
-  margin-top: 5px;
-}
-li::marker {
-  color: white;
-}
-li a {
-  text-decoration: none;
-  color: white;
-}
-.footer {
-  background-color: #28c2f3;
-}
-.social-links {
-  display: flex;
-  gap: 21px;
-  margin-top: 20px;
-}
-#last {
-  color: white;
-  text-align: center;
-  margin-top: 32px;
-  padding-bottom: 10px;
-}
-li a:hover {
-  color: yellow;
-}
-
-@media only screen and (max-width: 631px) {
-  .got {
-    font-size: 18px;
+  
+  .expert-btn a {
+    color: rgb(9, 195, 242);
+    font-weight: 300;
+    text-decoration-line: none;
+  }
+  
+  .expert-btn:hover {
+    background-color: cornflowerblue;
+    transform: scale(1.2);
+  }
+  
+  .expert-btn a:hover {
+    color: white;
+    transform: scale(1.1);
+  }
+  
+  .footer i {
+    color: orange;
+    font-size: 30px;
+    padding-left: 2rem;
+  
+  }
+  .footer {
+    margin-top: 2rem;
+    margin-bottom: -4rem;
+    padding: 20px;
+    height: auto;
+    width: auto;
+    background-color: rgba(255, 255, 255, 0.915);
+    border: 2px solid white;
+    border-radius: 15px;
     text-align: center;
-    margin-top: 12px;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
-  .Contact {
+  
+  .msg {
+    padding-left: 5rem;
+    margin-top: 9rem;
+  }
+  h3 {
     display: block;
-  }
-  .btndiv {
-    display: block;
-    width: 100px;
-    margin: auto auto 30px auto;
-  }
-  #contact-btn {
-    margin-top: 12px;
-  }
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
-@media only screen and (max-width: 550px) {
-  .row {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .row div {
-    margin-left: 30px;
-  }
-  .footer-col div {
+.msg h3 {
+    color: #808080;
+}
+
+  .boxex {
     display: flex;
-    gap: 21px;
-    margin-left: 0px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px;
   }
-  li a {
-    font-size: 15px;
+  
+  .box {
+    flex: 1;
+    margin: 10px;
+    border: 1px solid aqua;
+    border-radius: 20px;
+    text-align: center;
   }
-  h4 {
-    font-size: 15px;
+  
+  .box h2 {
+    color: orange;
+    margin: 20px 0;
   }
+  
+  .box .inner-div {
+    height: 320px;
+    width: auto;
+    /* margin: 0 auto; */
+    margin-top: 15px;
+    margin-right: 20px;
+    margin-left: 15px;
+    background-color: grey;
+    border: 2px solid white;
+    border-radius: 10px;
+    
+
+
+  }
+  
+  .box p {
+    margin: 20px 5px;
+    color: black;
+  }
+  
+  .sessions {
+    height: 50px;
+    width: 230px;
+    margin: 1rem auto;
+    margin-left: 2rem;
+    border: 1px solid white;
+    background-color: orange;
+    border-radius: 45px;
+  }
+  
+  .sessions a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  
+  .sessions:hover {
+    background-color: green;
+    transform: scale(1.1);
+  }
+ 
+  .Questions {
+    display: flex;
+    justify-content: space-evenly; /* Questions on left and ul items on right on laptop */
+    align-items: center; /* Center vertically */
+    text-align: center; /* Center text horizontally */
+    padding: 2rem 0; /* Adjusted padding */
+  }
+  
+  .Questions h1 {
+    color: #00A1B9;
+    margin: 0; /* Remove unnecessary margin */
+  }
+  
+  .Questions ul {
+    padding: 0;
+    margin: 0; /* Remove default margin */
+    list-style: none; /* Remove default list style */
+  }
+  
+  .Questions ul li {
+    padding: 1rem; /* Adjusted padding */
+  }
+
+
+
+.footer1 {
+    padding: 1rem; /* Adjusted padding */
+    background-color: #00A1B9;
+    display: flex;
+    color: white;
+    justify-content: space-evenly;
+    flex-wrap: wrap; /* Added to wrap items on smaller screens */
 }
 
-i:hover {
-  background-color: palevioletred;
+.footer1 ul {
+    min-width: 200px;
+    margin: 10px; /* Added margin to create space between ul elements */
 }
 
-/*         Footer  CSS End Here      */
+.follow i {
+    font-size: 25px;
+}
+
+.rights {
+    background-color: #00a1b9;
+    text-align: center;
+    color: white;
+    padding: 10px 0;
+}
+  
+  /* Media Queries */
+  @media only screen and (max-width: 768px) {
+    .content {
+      padding: 2rem;
+      height: auto;
+      
+    }
+    .footer i {
+      font-size: 25px;
+      padding-left: 1rem;
+    }
+
+    .para {
+      max-width: 100%;
+    }
+  
+    .footer {
+      display: flex;
+      height: auto;
+      width: auto;
+  
+    }
+  
+    .box {
+      flex: 0 0 calc(50% - 20px);
+      max-width: calc(50% - 20px);
+    }
+      
+      .Questions {
+        display: contents;
+        padding: 2rem 0; /* Adjusted padding */
+    }
+    
+    .Questions h1 {
+        color: #00A1B9;
+        margin: 15px; /* Remove unnecessary margin */
+    }
+    
+    .Questions ul {
+        padding: 0;
+        margin: 0; /* Remove default margin */
+        list-style: none; /* Remove default list style */
+    }
+    
+    .Questions ul li {
+        padding: 1rem 0; /* Adjusted padding */
+    }
+
+
+
+
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .msg {
+      padding: 0 1rem;
+    }
+
+    .footer {
+        padding: 1px;
+    }
+    
+    .footer i {
+        font-size: 20px;
+        padding-left: 1rem;
+    }
+    .box {
+      flex: 0 0 calc(100% - 20px);
+      max-width: calc(100% - 20px);
+    }
+    .footer1 ul  {
+        min-width: 260px; 
+        justify-content: center;
+        flex-direction: column;  
+    }
+    
+  }
+  
